[project]
name = "spotify-listening"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Pryazhentsev",email = "chris@pryazhentsev.com"}
]
requires-python = ">=3.12"
dependencies = [
    "spotipy (>=2.26.0,<3.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
